--- a/z/ze/zen/zend2.com.html
+++ b/z/ze/zen/zend2.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zend2.com privacy policy that was archived on 2012-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20121122140637id_/http%3A//zend2.com/disclaimer.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zend2.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215011257id_/https%3A//zend2.com/disclaimer.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -10,7 +10,9 @@
 <meta name="description" content="Online anonymous proxy server. Online proxy for watching movies, browsing youtube, downloading programs you can even surf facebook and myspace.">
 
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "f01cbed9-cc07-4523-b1bc-5fb53e57040f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 
 
 
@@ -28,8 +30,8 @@
 
 </script>
 
-	<script type="text/javascript">ginf={url:'http://zend2.com',script:'bro.php',target:{h:'',p:'',b:'',u:''},enc:{u:'xoSkePPAvNsPu6yluhM3KjdRedL1F3m2f3bjIQH2rZFJU1Uc8v5GE8lH9WwEQJxVAw36aAWsor16gK8e54Iz0T40GrukYP3obUiaj5sxmhttRrvMj2aaL4Yflip9WhlV',e:'1',x:'',p:''},b:'29'}</script>
-	<script type="text/javascript" src="http://zend2.com/includes/main.js?1.4.1"></script>
+	<script type="text/javascript">ginf={url:'https://zend2.com',script:'vip.php',target:{h:'',p:'',b:'',u:''},enc:{u:'XRfsK5PZ7DHg524qAZIBxEd7KNSyH5QsKTKkMn7JPEOKuGYSvwkQZlMzZuXunCLVjj3Wx0tcs7KLDytXTBDINd7AvSSIitrsBkeW8vWrtw0UUjHDL99mc4KyNq4VImb9',e:'1',x:'',p:''},b:'29'}</script>
+	<script type="text/javascript" src="https://zend2.com/includes/main.js?1.4.6"></script>
 <style type="text/css">
 
 html {
@@ -565,7 +567,19 @@ $(document).ready(function(){
 		});
 
 	</script>
+<script type="text/javascript">
 
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-1024964-8']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body>
@@ -614,27 +628,24 @@ $(document).ready(function(){
 
       <div class="con_top_cen" style="padding:38px 48px 0;">
 
-	  	
-
-	<h1>Disclaimer</h1><br>
+	  	<h2 class="first">Disclaimer</h2>
 	<p>This service is provided as is, without warranty of any kind. Use of this service is entirely at your own risk. We cannot take responsibility for any direct or indirect damages resulting from the use of this service.</p>
 	<p>The service allows indirect browsing of external, third-party websites. We are not responsible for the content on any external websites that may be accessible through our service. A website viewed through our service is in no way owned by or associated with this website.</p>
 	<p>The term "indirect browsing" refers to the server which you connect to. During "direct" browsing, you connect to the server which provides the resource you are requesting. During "indirect" browsing, you connect to our server. Our script downloads the requested resource and forwards it to you.</p>
 	<p>Any resource (such as web pages, images, files) downloaded through our service may be modified. This may include, but is not limited to, editing URLs so that any resources referenced by the target resource are also downloaded indirectly. The accuracy and reliablity of this process is not guaranteed. The resource which you receive may not be an accurate representation of the resource requested.</p>
 	<p>A side-effect of indirect browsing may be anonymity. By connecting to our server instead of the target server, the target server does not see your IP address. However, we do not guarantee our service will be truly anonymous. The downloaded resource may reference other resources which your browser may automatically download. The service attempts to reroute all such requests through our server but may not be entirely successful. A single direct request will compromise your anonymity.</p>
-	<p>This service may download a resource over a secure connection but this may be sent back to you over an unsecure connection. Do not enter confidential information unless you are on a secure connection to our server.</p>
-<h2 class="first">Privacy Policy</h2>
- <p> If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at admin[at]]zend2.com. </p> 
+	<p>This service may download a resource over a secure connection but this may be sent back to you over an unsecure connection. Do not enter confidential information unless you are on a secure connection to our server.</p><p> Privacy Policy for www.zend2.com </p> 
+ <p> If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at admin@zend2.com. </p> 
  <p> At www.zend2.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by www.zend2.com and how it is used. </p> 
  <p> <b>Log Files</b><br> Like many other Web sites, www.zend2.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track users movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. </p> 
- <p> <b>Cookies and Web Beacons</b><br> www.zend2.com does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. </p> 
+ <p> <b>Cookies and Web Beacons</b><br> www.zend2.com does not use cookies. </p> 
  <b>DoubleClick DART Cookie</b><br> 
  <p> 
  .:: Google, as a third party vendor, uses cookies to serve ads on www.zend2.com.<br> 
  .:: Google's use of the DART cookie enables it to serve ads to your users based on their visit to www.zend2.com and other sites on the Internet. <br> 
  .:: Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at the following URL - http://www.google.com/privacy_ads.html </p> 
  <p> Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include ....... <br> Google Adsense
- <br> <br> <br> </p> 
+ <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> </p> 
  <p> These third-party ad servers or ad networks use technology to the advertisements and links that appear on www.zend2.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see. </p> 
  <p> www.zend2.com has no access to or control over these cookies that are used by third-party advertisers. </p> 
  <p> You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. www.zend2.com's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites. </p> 
