--- a/n/nw/nwc/nwc.com.au.html
+++ b/n/nw/nwc/nwc.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nwc.com.au privacy policy that was archived on 2013-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130820094009id_/http%3A//www.nwc.com.au/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nwc.com.au privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215011530id_/http%3A//nwc.com.au/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -218,23 +218,23 @@ function MM_swapImage() { //v3.0
     <td valign="top" bgcolor="#909094"><img src="images/termsandconditions/t&amp;c-top3left.jpg" width="185" height="598"></td>
     <td align="left" valign="top" class="mainheadingwhitecentre25pt"><table width="100%" border="0" cellspacing="25" cellpadding="0">
       <tbody><tr class="bodymaingreyleft14pt">
-        <td width="50%"><p class="subheadingblueleft17pt">NWC  Privacy Policy</p>
+        <td width="50%"><h1 class="subheadingblueleft17pt">NWC  Privacy Policy</h1>
           <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
           <p class="footergreyleft12pt">The objective of this  policy is to assist us to comply with the Privacy Act 1988 (Cth) in our  dealings with insureds and other people. The Act is designed to protect  individuals’ personal information. It does this by restricting the ways in  which personal information may be used.          </p>
           <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
           <p class="bodymaingreyleft14ptBOLD">COMPLYING WITH THE PRIVACY ACT HELPS US TO ENHANCE OUR CLIENT SERVICE.</p>
           <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
-          <p class="bodymaingreyleft14ptBOLD">What is Personal Information?</p>
+          <h2 class="bodymaingreyleft14ptBOLD">What is Personal Information?</h2>
           <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"><br>
             <span class="footergreyleft12pt">Personal Information is information or  opinion about an individual whose identity is apparent or can easily be  ascertained from the information or opinion.</span></p>
 <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
-          <p class="bodymaingreyleft14ptBOLD">Sensitive Personal Information </p>
+          <h2 class="bodymaingreyleft14ptBOLD">Sensitive Personal Information </h2>
           <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"><br>
             <span class="footergreyleft12pt">Sensitive Personal Information is information  or opinion about a person’s racial or ethnic origin, political opinions,  membership of a political, trade or professional association or a trade union,  religious or philosophical beliefs or affiliations, sexual preferences,  criminal record or health information.</span></p>
 <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"></p>
   <p class="footergreyleft12pt">Our Privacy Officer, is responsible for all matters to do with privacy.</p>
           <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
-          <p class="bodymaingreyleft14ptBOLD">What information do we collect? </p>
+          <h2 class="bodymaingreyleft14ptBOLD">What information do we collect? </h2>
           <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"><br>
             <span class="footergreyleft12pt">We collect Personal Information from our  clients, our employees or others. However we only collect Personal Information  that we need and we only use the information that we collect for the primary  purpose(s) for which we collect it. These are:</span></p>
 <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"></p>
@@ -265,7 +265,7 @@ function MM_swapImage() { //v3.0
               </tr>
           </tbody></table>
           <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
-          <p class="bodymaingreyleft14ptBOLD">How do we use Personal Information?</p>
+          <h2 class="bodymaingreyleft14ptBOLD">How do we use Personal Information?</h2>
           <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"><br>
             <span class="footergreyleft12pt">We do not use or disclose the information for any other purpose without the person's consent. </span><br>
             <span class="footergreyleft12pt">In particular, we do not:</span></p>
@@ -298,9 +298,9 @@ function MM_swapImage() { //v3.0
           </tbody></table>
           <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"><br>
           </p>
-<p class="footergreyleft12pt">In most cases we obtain consent in the usual course of dealing, e.g. in our Warranty Contract application form.</p>
+<p class="footergreyleft12pt">In most cases we obtain consent in the usual course of dealing, e.g. in our Warranty Contract application form. In  providing products and services to you, we may also share your personal  information with other members of our group or any other associated entities or  related bodies corporate. Please contact us if you do not wish this to happen.</p>
 <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
-          <p><span class="bodymaingreyleft14ptBOLD">What can we disclose? </span></p>
+          <h2><span class="bodymaingreyleft14ptBOLD">What can we disclose? </span></h2>
           <p><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"><br>
             <span class="footergreyleft12pt">The Privacy Act does allow us to use or  disclose information in some other unusual circumstances. If you want to use or  disclose Personal Information for any reason other than those described above,  check with our Privacy Officer before doing so.[1]</span></p>
 <p><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
@@ -317,9 +317,8 @@ function MM_swapImage() { //v3.0
   <tr>
     <td colspan="3" class="footergreycentre12pt"><p class="footerbluecentre14pt"><a href="contactus.aspx">Contact Us</a><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"><span style="color: #333">|</span><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"><a href="termsandconditions.html">Website Terms &amp; Conditions</a><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"><span style="color: #333">|</span><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"><a href="#">Privacy Policy</a></p>
     <p class="footerbluecentre14pt"><img src="images/miscellaneous/spacer10px.gif" width="10" height="10"></p>
-      <p class="footergreycentre12pt">Copyright 2013 National Warranty Company is the trading name of Davantage Group Pty Ltd<br>
-        and a subsidiary of 
-      Presidian Pty Ltd. All rights reserved.</p>
+      <p class="footergreycentre12pt">Copyright 2013 National Warranty Company is the trading name of Davantage Group Pty Ltd,<br>
+a subsidiary of Presidian Pty Ltd. All rights reserved.</p>
     <p class="footergreycentre12pt"><img src="images/miscellaneous/spacer5px.gif" width="5" height="5"></p></td>
   </tr>
   <tr>
