--- a/p/pr/pri/prizelive.com.html
+++ b/p/pr/pri/prizelive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the prizelive.com privacy policy that was archived on 2013-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131203050105id_/http%3A//www.instagc.com/users/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prizelive.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215015310id_/http%3A//www.instagc.com/users/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<title>Privacy Policy | instaGC</title>
@@ -8,22 +8,22 @@
 	<meta name="description" content="Complete offers, earn points, redeem points, and get a free gift card instantly. instaGC makes it easy to receive free gift cards.">
 	<meta name="keywords" content="instant gift cards, igc, earn gift cards, instant money, complete offers, free money, free gift cards">
 	<meta name="robots" content="index,follow">
-	<link type="text/css" rel="stylesheet" href="http://cdn.instagcstatic.com/css/theme-guest.css?u=306">
-	<link type="text/css" rel="stylesheet" href="http://cdn.instagcstatic.com/css/terms.css?u=306">
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src="http://cdn.instagcstatic.com/js/theme-guest.js?u=306"></script>
+	<link type="text/css" rel="stylesheet" href="http://cdn.instagcstatic.com/css/theme-guest.css?u=318">
+	<link type="text/css" rel="stylesheet" href="http://cdn.instagcstatic.com/css/terms.css?u=318">
+	<script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&amp;ns=14"></script><script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="http://cdn.instagcstatic.com/js/theme-guest.js?u=318"></script>
 </head>
 <body>
 	
 <!-- Container -->
 <div id="container">
 	<header id="header">
-		<a href="http://www.instagc.com/"><img width="171" height="51" src="http://cdn.instagcstatic.com/themes/home/small-logo.png" alt="instaGC, Home of the Instant Gift Cards"></a>
+		<a href="/"><img width="171" height="51" src="http://cdn.instagcstatic.com/themes/home/small-logo.png" alt="instaGC, Home of the Instant Gift Cards"></a>
 		<nav>
-			<a href="http://www.instagc.com/">Home</a>
-			<a href="http://www.instagc.com/giftcards">Gift Cards</a>
-			<a href="http://www.instagc.com/users/login">Login</a>
-			<a href="http://www.instagc.com/users/join">Join</a>
+			<a href="/">Home</a>
+			<a href="/giftcards">Gift Cards</a>
+			<a href="/users/login">Login</a>
+			<a href="/users/join">Join</a>
 		</nav>
 	</header>
 	<div id="body"><div class="ui-title">Privacy Policy</div>
@@ -62,7 +62,7 @@ Additional items will be added as deemed necessary.
 	<div>Said owners do not endorse nor are they affiliated with Day Online Solutions, LLC or its promotions.</div>
 	<br>
 	<div>
-		instaGC.com © 2011-2013 -
+		instaGC.com © 2011-2014 -
 		<a href="/contact" data-overlay="" data-auto="" data-title="Report Abuse">Report Abuse</a> -
 		<a href="/users/privacy-policy">Privacy Policy</a> -
 		<a href="/users/terms">Terms of Service</a> -
@@ -77,5 +77,13 @@ $.getScript('https://d31qbv1cthcecs.cloudfront.net/atrk.js', function(){
 	atrk();
 });
 </script>
-<noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=IW+Jg1awAe008o" style="display:none" height="1" width="1" alt="" /></noscript>
+<noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=IW+Jg1awAe008o" style="display:none" height="1" width="1" alt="" /></noscript><script type="text/javascript">
+//<![CDATA[
+(function() {
+var _analytics_scr = document.createElement('script');
+_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&ns=14';
+var _analytics_elem = document.getElementsByTagName('script')[0]; _analytics_elem.parentNode.insertBefore(_analytics_scr, _analytics_elem);
+})();
+// ]]>
+</script>
 </body></html>
